# decoder

./: CMakeLists.txt  FileParser.md  README.md  decoder.cc  psdWaveform.cfg  waveform.cfg
.github/workflows/: cmake-multi-platform.yml
cfg/: psd.cfg  psdWaveform.cfg
config/: CMakeLists.txt
config/include/: ConfigFileParser.hh  ConfigInputParser.hh  ConfigParser.hh  ConfigParserFactory.hh
config/src/: ConfigFileParser.cc  ConfigInputParser.cc  ConfigParserFactory.cc
data/: TList  output.txt  waveformSig.txt
decoders/: CMakeLists.txt
decoders/include/: Decoder.hh  DecoderBuilder.hh  DecoderFactory.hh  DecoderPSD.hh  DecoderWaveform.hh
decoders/src/: DecoderBuilder.cc  (+3 more)
doc/: bstyle.sty  doc.tex
global/: CMakeLists.txt
global/include/: EncoderParameters.hh  OutputConfig.hh  PlotterHist.hh  RootFile.hh  Waveform.hh
global/src/: RootFile.cc
include/: ConfigInputParser.hh  ConfigParser.hh  Decoder.hh  DecoderBuilder.hh  DecoderFactory.hh  DecoderPSD.hh  DecoderType.hh  DecoderWaveform.hh  EncoderParameters.hh  OutputConfig.hh  Plotter.hh  PlotterWaveform.hh  RootFile.hh  Waveform.hh  WriteRootNtuple.hh  WriteRootWaveform.hh  WriteRootWaveformSig.hh  WriteTxtNtuple.hh  WriteTxtWaveform.hh  Writer.hh  WriterFactory.hh
plotter/: CMakeLists.txt
src/: ConfigInputParser.cc  ConfigParser.cc  Decoder.cc  DecoderBuilder.cc  DecoderFactory.cc  DecoderPSD.cc  DecoderWaveform.cc  Plotter.cc  PlotterWaveform.cc  WriteRootNtuple.cc  WriteRootWaveform.cc  WriteRootWaveformSig.cc  WriteTxtNtuple.cc  WriteTxtWaveform.cc  WriterFactory.cc
writer/: CMakeLists.txt
(+17 files in other folders)
